2022-02-15  Mark Lam  <mark.lam@apple.com>

        Defer TerminationsExceptions while in operationMaterializeObjectInOSR.
        https://bugs.webkit.org/show_bug.cgi?id=236686
        rdar://81337114

        Reviewed by Saam Barati.

        These tests are identical except that they are customized with different watchdog
        timeout periods for a Debug / Release build.  This is a necessary condition in
        order for the test to manifest this issue if the code is regressed.

        * stress/termination-exception-in-operationMaterializeObjectInOSR-debug.js: Added.
        * stress/termination-exception-in-operationMaterializeObjectInOSR-release.js: Added.

2022-02-15  Xan Lopez  <xan@igalia.com>

        [JSC] Reduce iterations for getter-richards.js on MIPS
        https://bugs.webkit.org/show_bug.cgi?id=236594

        Reviewed by Adrian Perez de Castro.

        * typeProfiler/getter-richards.js: do 50 iterations on MIPS.

2022-02-14  Yusuke Suzuki  <ysuzuki@apple.com>

        `Array#{ groupBy, groupByToMap }` should throw a `TypeError` when `this` is `null` or `undefined`
        https://bugs.webkit.org/show_bug.cgi?id=236541

        Reviewed by Alexey Shvayka.

        * stress/array-group-by-null-or-undefined.js: Added.
        (shouldThrow):

2022-02-09  Angelos Oikonomopoulos  <angelos@igalia.com>

        Skip failing shadow realms tests on MIPS
        https://bugs.webkit.org/show_bug.cgi?id=236361

        Unreviewed gardening.

        * stress/shadow-realm-evaluate.js:
        * stress/shadow-realm-import-value.js:

2022-02-08  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure
        https://bugs.webkit.org/show_bug.cgi?id=236332
        rdar://88483574

        Reviewed by Michael Saboff.

        * stress/yarr-inlining-dot-star-enclosure.js: Added.
        (test):

2022-02-08  Caitlin Potter  <caitp@igalia.com>
